4.Exposing_Application/ingress-result.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: .bluebridge.lt
    http:
      paths:
      - path: 
        backend:
          serviceName:  
          servicePort:
