4.Exposing_Application/ingress-vote.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: 
          servicePort:
